# llm_spotlight

./: .gitignore  main.py  pyproject.toml  requirements.txt
src/llm_spotlight/: __init__.py  clean_werewolf.py
tools/: analysis.py  download.py  draw.py  install.py  llm_test.py  merge.py  report_visualization.py  test.py
werewolf/: apis.py  config.py  game.py  lm.py  logging.py  model.py  prompts.py  runner.py
