[project]
name = "llm-spotlight"
version = "0.1.0"
description = "Dataset cleaning utilities for Werewolf LLM course project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.19.0",
    "tqdm>=4.66.0",
]

[project.scripts]
clean-werewolf = "llm_spotlight.clean_werewolf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
